test/libsolidity/syntaxTests/scoping/double_private_function_declaration.sol
contract A {
	function foo() private {}
	function foo() private {}
}
// ----
// DeclarationError 1686: (14-39): Function with same name and parameter types defined twice.
